# test_task1

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
framework/: login_page.py  page.py
tests/: conftest.py
tests/login/: conftest.py  test_login.py
utils/: android_utils.py  config.py
